[#161417689] Updating the UI
Updating the UI after Implementing feedback.

--- a/UI/css/modal.css
+++ b/UI/css/modal.css
@@ -8,7 +8,7 @@ body{
     border-radius: 5px;
     background:#551263;
     padding:1em 2em;
-    color:aqua;
+    color:white;
     border:0;
   }
   
