--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -1,5 +1,11 @@
 @charset "utf-8";
 /* CSS Document */
+*{
+	padding: 0;
+	margin: 0;
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+   }
+   
 #container {
 font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 }
@@ -11,9 +17,9 @@ button[type=submit], button[type=button] {
 	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 	background-color: #551263;
 	color: white;
-	padding: 10px 10px 30px 10px;
+	padding: 30px 20px 30px 20px;
 	border: none;
-	color: aqua;
+	color: white;
 	border-radius: 4px;
 	cursor: pointer;
 	margin-top: 8px;
@@ -24,11 +30,11 @@ button[type=submit], button[type=button] {
 
 #receipt-table th{
 	background-color: #551263;
-	color: aqua;
+	color: white;
 	text-align: left;
 }
 #receipt-table td, #receipt-table th, #receipt-table tfoot{
-	border:thin solid aqua;
+	border:thin solid white;
 }
 
 input[name=quantity_to_be_purchased] {
@@ -52,7 +58,7 @@ nav > ul {
 #product_filter {
   background-position: 10px 10px;
   background-repeat: no-repeat;
-  width: 75%;
+  width: 50%;
   font-size: 16px;
   padding: 12px 20px 12px 40px;
   border: 1px solid #ddd;
@@ -84,7 +90,7 @@ form {
 	margin: 5px;
 	background-color: #551263;
 	font-size: 20px;
-	color:aqua;
+	color:white;
 	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 
 
@@ -94,13 +100,13 @@ form {
 	margin: 5px;
 	background-color: #551263;
 	font-size: 20px;
-	color:aqua;
+	color:white;
 	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 }
 
 nav ul li a {
     display: block;
-    color: aqua;
+    color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -112,10 +118,10 @@ nav ul li a {
 		float:left;
 		text-align: left;
 		text-transform: uppercase;
-		color: aqua;
+		color: white;
 		line-height: 2.5;
 		text-indent: 10px;
-		font-size: 18px;
+		font-size: 20px;
 	    font-weight: 600;
 		font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 	}
@@ -125,19 +131,19 @@ nav ul li a {
   #loginlink {
 	text-decoration: none;
 	background-color: #551263;
-	color: aqua;
+	color: white;
 	width: 30px;
 	display: block;
 	margin: 10px 5px;
-	padding-top: 5px;
-	padding-right: 10px;
-	padding-bottom: 10px;
-	padding-left: 5px;
+	padding-top: 15px;
+	padding-right: 15px;
+	padding-bottom: 15px;
+	padding-left: 15px;
 
 }
     #logo > a {
         text-decoration: none;
-        color: aqua;
+        color: white;
     }
 
 
@@ -213,5 +219,5 @@ h2{
     padding-bottom: 12px;
     text-align: left;
     background-color: #551263;
-    color: aqua;
+    color: white;
 }
